@@ -2,6 +2,8 @@ package advworld.level;
 
 import java.util.*;
 
+import advworld.util.Utility;
+
 /**
  * implementation of the Location class with a general World
  * @author Sam
@@ -10,15 +12,15 @@ import java.util.*;
 public class World extends Location{
 		
 	public World(String name){
-		super();
+		super(name);
 	}
 
 	public World(String name, Location Parent){
-		super();
+		super(name,Parent);
 	}
 	
 	public World(String name, Location Parent, Iterator<Location> children){
-		super();
+		super(name,Parent,children);
 	}
 	
 	public void action(String command) {
@@ -29,7 +31,7 @@ public class World extends Location{
 		return "This is a world";
 	}
 
-	public Vector<Exit> exits() {
+	public Vector<Connection> exits() {
 		return null;
 	}
 }
