@@ -1,4 +1,0 @@
-LOCATION world1 
-LOCATION Room1 PARENT world1
-LOCATION Room2 PARENT world1
-CONNECTION Room1 Room2
